fix Tabs component scrollbar

--- a/src/forms/components/override/tabs/tabs.scss
+++ b/src/forms/components/override/tabs/tabs.scss
@@ -30,6 +30,13 @@ $small-size: 28px;
       max-width: 100%;
       overflow-y: hidden;
       overflow-x: auto;
+
+      // hide scrollbar
+      -ms-overflow-style: none; // Internet Explorer 10+
+      scrollbar-width: none; // Firefox
+      &::-webkit-scrollbar {
+        display: none; // Safari and Chrome
+      }
     }
 
     .nav-item {
